--- a/compose.yaml
+++ b/compose.yaml
@@ -2,10 +2,20 @@ services:
   app:
     build:
       context: .
-      target: poetry
+      target: prod
     restart: always
-    command: /bin/sh -c "tail -f /dev/null" #./TinyLlama-1.1B-Chat-v1.0.Q5_K_M.llamafile --server --nobrowser
+    command: python model.py
+    volumes:
+      - "./hf_cache:/root/.cache/huggingface"
+      - ".:/app/"
     ports: 
       - "18080:8080"
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            capabilities: ["gpu"]
+    
     # environment:
       # - FLASK_ENV=development
