--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,14 @@ authors = ["apires <piresa1999@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 torch = "^2.3.1"
 transformers = "^4.42.3"
 ipython = "^8.26.0"
+flask = "^3.0.3"
+accelerate = "^0.31.0"
+torchvision = "^0.18.1"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
